reintroduce continue and fix alignment.

--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -14,6 +14,7 @@ body {
 .child{
     display:table-cell;
     height: 175;
+    vertical-align:top;
     /*height:20px;*/
 }
 
